
  * DistUpgrade/DistUpgradeCache.py:
    - take changes in update-initramfs into account when
      calculating the space requirements in /boot (LP: #287826)
    - when doing the space calculation, show the required space
      for each directory (if multiple need more space) LP: #219416
  * DistUpgrade/DevelReleaseAnnouncement:
    - updated for beta

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 19 Mar 2009 16:48:11 +0100

update-manager (1:0.101.1) jaunty; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeCache.py:
    - catch cache.update() errors that do not raise exceptions
  * DistUpgrade/DistUpgradeController.py:
    - when calculating the obsolete packages, add extra paranoia
      for odd network failures (LP: #335154)
  * DistUpgrade/DistUpgradeAufs.py:
    - do not overlay /var/cache/apt/archives so that the user
      does not have to download the packages twice
    - honor the TMPDIR environment (by using tempfile)
  * DistUpgrade/DistUpgrade.cfg:
    - add powernowd to the forced obsoleted packages (the kernel
      does handle that with the builin ondemand governor now)

  [ Jonathan Riddell ]
  * DistUpgrade/DistUpgrade.cfg:
    - remove gtk-qt-engine in Kubuntu upgrades

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 18 Mar 2009 17:57:54 +0100

update-manager (1:0.101.0) jaunty; urgency=low

  [ Brian Murray ]
  * UpdateManagerHildon/UpdateManagerHildon.py:
     - wording fix "will be" to "are being" (LP: #338943)
  
  [ Michael Vogt ]
  * UpdateManager/UpdateManagerText.py:
    - fix crash in changelog display (LP: #341577)
      (thanks to Steve Beattie)
    - support NEWS.Debian from the server as well
  * DistUpgrade/DistUpgradeAufs.py:
    - fix in is_submount detection (thanks to liw for reporting)

  [ Gabor Kelemen ]
  * data/glade/UpdateManager.glade:
    - fix missing "translatable" property (LP: #342011)
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 13 Mar 2009 10:09:30 +0100
